--- a/src/main/resources/.h2.server.properties
+++ b/src/main/resources/.h2.server.properties
@@ -1,4 +1,5 @@
 #H2 Server Properties
+#Sun Jul 14 11:41:14 CST 2019
 0=JHipster H2 (Disk)|org.h2.Driver|jdbc\:h2\:file\:./target/h2db/db/bugtrackerjhipster|BugTrackerJHipster
 webAllowOthers=true
 webPort=8082
